--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,27 @@ header::before {
     border-radius: 5px;
 }
 
+/* Estilos para el botón de silenciar */
+.mute-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #FF1C1C;
+    color: white;
+    border: 2px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 1.5em;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+}
+
+.mute-button:hover {
+    background-color: #ff4444;
+}
+
 .pokemon-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
@@ -188,6 +209,14 @@ header::before {
         height: 6vh;
         border-width: 2px; 
         top: calc(100% + 0.9vh); 
+    }
+
+    .mute-button {
+        width: 40px; /* Botón más pequeño */
+        height: 40px;
+        font-size: 1.2em; /* Ícono más pequeño */
+        bottom: 10px; /* Posición más arriba */
+        right: 10px; /* Posición más a la izquierda */
     }
 
     .pokemon-grid {
